tests/core/error/fts-snippet-2.rq
SELECT fts:snippet() { ?u fts:match "a" }
